commit final das mudanças em todos os exercicios com refatoramento.

--- a/analisadorDeNumeros/style.css
+++ b/analisadorDeNumeros/style.css
@@ -8,9 +8,10 @@ header {
   color: white;
 }
 
-select {
+select#guaNumero {
   width: 150px;
 }
+
 section {
   padding: 15px;
   text-align: center;
